# hse-mlops-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
configs/: config.yaml
data/: test.csv.dvc  train.csv.dvc
hse_mlops_project/: infer.py  train.py  utils.py
models/: catboost_model.cbm.dvc
predictions/: predictions.csv.dvc
